fix: z-index hierarchy

--- a/app/src/ui/style/tokens.scss
+++ b/app/src/ui/style/tokens.scss
@@ -32,6 +32,8 @@ $extra-bold: 800;
 $z-level-1: 1;
 $z-level-2: 10;
 $z-level-3: 100;
+$z-navigation: 200;
+$z-widget-notification: 500;
 $z-modal-overlay: 999;
 $z-modal-content: 1000;
 
